[package]
name = "rustracing_jaeger"
version = "0.1.6"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Jaeger client library created on top of rustracing"
homepage = "https://github.com/sile/rustracing_jaeger"
repository = "https://github.com/sile/rustracing_jaeger"
readme = "README.md"
keywords = ["opentracing", "jaeger"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/rustracing_jaeger"}
codecov = {repository = "sile/rustracing_jaeger"}

[dependencies]
futures = "0.1.21"
hostname = "0.1"
rand = "0.4"
reqwest = { version = "0.8.5", features = ["unstable"]  }
rustracing = "0.1"
thrift_codec = "0.1"
trackable = "0.2"
url = "1.7.0"
